style.css
/* 
    $white: #FFFFFF;
    $light: #EBE0E6;
    $bright: #D19FBA;
    $medium: #6D608B;
    $dark: #2C4059;
    $black: #05111F;
*/

* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
body {
    background-image: url(images/benjamin-voros-phIFdC6lA4E-unsplash.jpg);
    background-repeat: no-repeat;
    background-attachment: fixed;  
    background-size: cover;
    background-position: center;

    overflow: scroll;
    margin: 0 0;
    padding: 0 0;
}

header {
    background-color: #05111fbe;
    color: #D19FBA;
    text-align: center;
}
/* h1,  */
h2, h3 {
    color: #D19FBA;
    text-align: center;
    padding: 8px 0;
}
h1 {
    margin: 0 0;
    padding-top: 24px;
    /* background-color: #05111fbe; */
    font-size: 48px;
}
h2 {
    background-color: #05111f96;
    color: #D19FBA;
    text-align: center;
    padding: 8px 0;
}
h3 {
    background-color: #6d608bbe;
    color: #FFFFFF;
}

ul.top_nav {
    list-style-type: none;
    overflow: hidden;
    background-color: #05111f;
    padding-left: 0;
    margin: 0 0;
    /* Centering List */
    text-align: center;
}

ul.top_nav li {
    /* Centering List */
    display: inline-block;
}

ul.top_nav li a {
    display: block;
    color: #ebe0e6;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

a:hover {
/* ul.top_nav li a:hover {  */
    background-color: #2c4059;
}
a:link, a:visited, a:active {
    color: #ebe0e6;
}

main {
    margin-bottom: 100px;
}
.inline {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}
.card {
    background-color: #d19fbabe;
    width: fit-content ;
    margin: 16px;
    align-content: center;

    border-radius: 10px;
}
figure {
    margin: 0;
}
figcaption {
    width: 400px;
    text-align: center;
    word-wrap: break-word;
    /* margin: 0 16px; */
    padding-bottom: 16px;
}
figcaption p {
    padding: 0 16px;
    margin: 0 0;
    font-style: oblique;
}
img {
    width: 300px;
    padding: 50px;
    align-self: center;
}


/* Footer */
/* footer {
    position: fixed;
    bottom: 0;
    width: 100%;
} */

